--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="rcstyle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rebecca Collins</h1>
@@ -29,9 +29,14 @@
     <p></p>
     <p class="light">I also enjoy ocasionally watching films, shows, youtube skits.. (etc) and am currently enjoying <a href="https://en.wikipedia.org/wiki/Delicious_in_Dungeon" target="_blank">Delicious in Dungeon!</a> </p>
     <p></p>
+    <h3>My targets and current progress</h3>
+    <p>My ideal career change would be to work in developing games. With some experience in character design, a creative mind and hobby that is gaming, I believe I would enjoy building such a career.</p>
+    <p></p>
+    <p>Alternatively, I have been given resources to learn data analysis. Some of the methods I have learned have been intruiging and confidence boosting.</p>
+    <p>I understand that I need to work on my communication skills more, I need to be more active on LinkedIn, Reaching out to others and showing what I can do is greatly benifical.</p>
     <p class="light">Random Fact: I actually have an honours degree in Costume Making for Stage and Screen. </p>
     <p class="light">I also have a 3 year old cat called Benji and he is a little monster♥️</p>
-    <img src="Benji.jpg" width = 350 height = 500>
+    <img src="./images/Benji.jpg" width = 350 height = 500>
     
     <footer>
         <p></p>
