--- a/About.html
+++ b/About.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Rebecca Collins</h1>
     <p></p>
-    <p class="light">I am based in Liverpool and aiming to develop my skills to idealy work in Game Development! It would be fun and interesting to be able to create something that I enjoy so often! </p>
+    <p class="light">I am based in Liverpool and aiming to develop my skills to ideally work in Game Development! It would be fun and interesting to be able to create something that I enjoy so often! </p>
     <p></p>
     <h2>Skills and Developments</h2>
     <p class="light">I have recently finished learning level 3 <a href="https://www.w3schools.com/python/default.asp">Python</a> (which was eye-opening) and have gained a certificate in Digital Skills Level 2. I'm hoping to get more comfortable with <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">JavaScript </a> and build my confidence in working with others. I will be researching more on what skills and experience may be required to work in the industry. </p>
     <p></p>
     <h2>Personal</h2>
-    <p class="light">In my free time I am usually found playing various computer or PS5 games. I am currently on Final Fantasy:Rebirth (No Spoilers please!) and Baldurs Gate 3 (You can spoil. My sister already did🫠). My favourite characters from both are Barret, Tifa, Karlach and Shovel. 👀</p>
+    <p class="light">In my free time I am usually found playing various computer or PS5 games. I am currently on Final Fantasy: Rebirth (No Spoilers please!) and Baldur's Gate 3 (You can spoil. My sister already did🫠). My favourite characters from both are Barret, Tifa, Karlach and Shovel. 👀</p>
     <p></p>
     <h2>Some of My Favourite Games include..</h2>
     <ul id="list">
@@ -27,23 +27,24 @@
         <li>Stray</li>
     </ul>
     <p></p>
-    <p class="light">I also enjoy ocasionally watching films, shows, youtube skits.. (etc) and am currently enjoying <a href="https://en.wikipedia.org/wiki/Delicious_in_Dungeon" target="_blank">Delicious in Dungeon!</a> </p>
+    <p class="light">I also enjoy occasionally watching films, shows, YouTube skits.. (etc) and am currently enjoying <a href="https://en.wikipedia.org/wiki/Delicious_in_Dungeon" target="_blank">Delicious in Dungeon!</a> </p>
     <p></p>
-    <h3>My targets and current progress</h3>
+    <h2>My targets and current progress</h2>
     <p>My ideal career change would be to work in developing games. With some experience in character design, a creative mind and hobby that is gaming, I believe I would enjoy building such a career.</p>
     <p></p>
-    <p>Alternatively, I have been given resources to learn data analysis. Some of the methods I have learned have been intruiging and confidence boosting.</p>
-    <p>I understand that I need to work on my communication skills more, I need to be more active on LinkedIn, Reaching out to others and showing what I can do is greatly benifical.</p>
+    <p>Alternatively, I have been given resources to learn data analysis. Some of the methods I have learned have been intriguing and confidence-boosting.</p>
+    <p>I understand that I need to work on my communication skills more, I need to be more active on LinkedIn, Reaching out to others and showing what I can do is greatly beneficial.</p>
     <p class="light">Random Fact: I actually have an honours degree in Costume Making for Stage and Screen. </p>
-    <p class="light">I also have a 3 year old cat called Benji and he is a little monster♥️</p>
-    <img src="./images/Benji.jpg" width = 350 height = 500>
-    
+    <p class="light">I also have a 3-year-old cat called Benji and he is a little monster♥️</p>
+    <div class="cat-container">
+        <img class="cat" src="./images/Benji.jpg" alt="Benji the cat">
+    </div>
     <footer>
         <p></p>
-        <p>Disclaimer</p>
+        <p>DISCLAIMER</p>
         <p>Now page based off of <a href="https://sive.rs/now" target="_blank">Derek Sivers</a></p>
         <p></p>
-        <p>Feel free to reach me on <a href="www.linkedin.com/in/rebeccacollins1007" target="_blank">My LinkedIn</a>!</p>
+        <p>Feel free to reach me on <a href="https://www.linkedin.com/in/rebeccacollins1007" target="_blank">My LinkedIn</a>!</p>
      </footer>
 </body>
 </html>
