--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rebecca Collins Portfolio</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-center w-100 h-100">
+    <div class="container">
+    <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
+        <h1 class="fw-light text-white m-0">Portfolio</h1>
+        <h5 class="fw-light text-white m-0">— Rebecca Collins —</h5>
+    </div>
+    <P>Hello!
+    I am an aspiring software developer, based in Liverpool, with a keen interest in bringing things to life with code. 
+    I have learned Python and recently been learning HMTL, CSS and JavaScript.<br>
+    I enjoy gaming on various paltforms and fantasy, sci-fi, pretty much all things creative!
+<BR>
 
-        <div class="d-flex flex-column justify-content-center align-items-center">
-            <h1 class="fw-light text-white m-0">Portfolio</h1>
-            <div class="btn-group my-5">
-                <a href="https://codepen.io/P1N2O/full/pyBNzX" class="btn btn-outline-light">FULL SCREEN <i class="fas fa-expand ms-2"></i></a>
-            </div>
-                <h5 class="fw-light text-white m-0">— Rebecca Collins —</h5>
-            </a>
-        </div>
+    [EXAMPLES OF WORK]
+<BR>
+<BR>
+    [Qualifications]
+    <BR>
+    <BR>
+        [express skills]
+        <br>
+        <BR>
+    [contact me]
+    <BR>
+    <BR>
+        [include GitHub]
+    </P>
     </div>
-    </div>
+    <link rel="script" href="Script.js">
 </body>
 </html>
