its getting pretty

--- a/index.html
+++ b/index.html
@@ -4,35 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rebecca Collins Portfolio</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-    <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
-        <h1 class="fw-light text-white m-0">Portfolio</h1>
-        <h5 class="fw-light text-white m-0">— Rebecca Collins —</h5>
-    </div>
-    <P>Hello!
-    I am an aspiring software developer, based in Liverpool, with a keen interest in bringing things to life with code. 
-    I have learned Python and recently been learning HMTL, CSS and JavaScript.<br>
-    I enjoy gaming on various paltforms and fantasy, sci-fi, pretty much all things creative!
-<BR>
-
-    [EXAMPLES OF WORK]
-<BR>
-<BR>
-    [Qualifications]
-    <BR>
-    <BR>
+        <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
+            <h1 class="fw-light text-white m-0">— Rebecca Collins —</h1>
+        </div>
+        <p>Hello!
+        I am an aspiring software developer, based in Liverpool, with a keen interest in bringing things to life with code. 
+        I have learned Python and recently been learning HTML, CSS, and JavaScript.<br>
+        I enjoy gaming on various platforms and fantasy, sci-fi, pretty much all things creative!
+        <br><br>
+        [EXAMPLES OF WORK]
+        <br><br>
+        [Qualifications]
+        <br><br>
         [express skills]
-        <br>
-        <BR>
-    [contact me]
-    <BR>
-    <BR>
-        [include GitHub]
-    </P>
+        <br><br>
+        [contact me]
+        <br><br>
+        <div class="links">
+            <a href="https://github.com/BColl91"><img src="./giticon.png"></a>
+            <a href="https://www.linkedin.com/in/rebeccacollins1007/"><img src="./linkedicon1.png"></a>
+        </div>
+        </p>
     </div>
     <link rel="script" href="Script.js">
 </body>
 </html>
+
