--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         I have learned Python and recently been learning HTML, CSS, and JavaScript.<br>
         I enjoy gaming on various platforms and fantasy, sci-fi, pretty much all things creative!
         <br><br>
-        [EXAMPLES OF WORK]
+        <h2>[EXAMPLES OF WORK]</h2>
         <br><br>
-        [Qualifications]
+        <h2>Qualifications</h2>
+       <ul>
+        <li>Python for beginners level 3 [Distinction]- Distance Learning center</li>
+        <li>ETCAL Level 2 Digital Technologies - Back 2 WORK</li>
+        </ul>
         <br><br>
-        [express skills]
-        <br><br>
-        [contact me]
+        <h2>SKILLS</h2>
+        Python   Javascript  HTML   CSS   React   
         <br><br>
         <div class="links">
             <a href="https://github.com/BColl91"><img src="./giticon.png"></a>
