--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="container">
         <div class="d-flex flex-column justify-content-center align-items-center w-100 h-100">
             <h1 class="fw-light text-white m-0">— Rebecca Collins —</h1>
@@ -16,7 +17,9 @@
         I have learned Python and recently been learning HTML, CSS, and JavaScript.<br>
         I enjoy gaming on various platforms and fantasy, sci-fi, pretty much all things creative!
         <br><br>
-        <h2>[EXAMPLES OF WORK]</h2>
+        <h2>[PROJECTS]</h2>
+        <br><br>
+        <h2>[Other Work]</h2>
         <br><br>
         <h2>Qualifications</h2>
        <ul>
