disc added and more personal

--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
         <li>ETCAL Level 2 Digital Technologies - Back 2 WORK</li>
         </ul>
         <br><br>
-        <h2>SKILLS</h2>
-        Python   Javascript  HTML   CSS   React   
+        <h2>SKILLS & DEVELOPMENTS</h2>
+        <p>Python   Javascript  HTML   CSS   React</p>  
         <br><br>
+        <h2>OTHER</h2>
+        <p>In my free time I am usually found playing various computer or PS5 games. I am currently on Final Fantasy: Rebirth (No Spoilers please!) and Baldur's Gate 3 (You can spoil). My favourite characters from both are Barret, Tifa, Karlach, and Shovel.</p>
         <div class="links">
             <a href="https://github.com/BColl91"><img src="./giticon.png"></a>
             <a href="https://www.linkedin.com/in/rebeccacollins1007/"><img src="./linkedicon1.png"></a>
         </div>
         </p>
     </div>
+    <div class="footer">Coded in Visual Studio Code by yours truly. Built with ###, deployed with Github and Netlify.</div>
     <link rel="script" href="Script.js">
 </body>
 </html>
